<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Aniadir">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/lblSelNivel"
                    style="@style/Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/labelNivel" />

                <Spinner
                    android:id="@+id/spnNivel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="4dp">

                <TextView
                    android:id="@+id/lblEnunciado"
                    style="@style/Label"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/labelEnunciado" />

                <EditText
                    android:id="@+id/txtEnunciado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:singleLine="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="4dp">

                <TextView
                    android:id="@+id/lblSelResA"
                    style="@style/Label"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/labelResA" />

                <EditText
                    android:id="@+id/txtResA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="4dp">

                <TextView
                    android:id="@+id/lblSelResB"
                    style="@style/Label"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/labelResB" />

                <EditText
                    android:id="@+id/txtResB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="4dp">

                <TextView
                    android:id="@+id/lblSelResC"
                    style="@style/Label"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/labelResC" />

                <EditText
                    android:id="@+id/txtResC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="4dp">

                <TextView
                    android:id="@+id/lblSelResD"
                    style="@style/Label"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/labelResD" />

                <EditText
                    android:id="@+id/txtResD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <TextView
                android:id="@+id/txtCorrecta"
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/labelCorrecta" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <RadioButton
                    android:id="@+id/radResA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioResA" />

                <RadioButton
                    android:id="@+id/radResB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioResB" />

                <RadioButton
                    android:id="@+id/radResC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioResC" />

                <RadioButton
                    android:id="@+id/radResD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/radioResD" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="4dp">

                <TextView
                    android:id="@+id/lblAudio"
                    style="@style/Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:paddingBottom="4dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/labelAudio"
                    tools:layout_editor_absoluteX="140dp"
                    tools:layout_editor_absoluteY="406dp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fabAudio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignStart="@+id/fabConfirm"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:backgroundTint="@android:color/black"
                    app:srcCompat="@drawable/adaudio" />

            </LinearLayout>

            <Button
                android:id="@+id/btnConfirm"
                style="@style/Boton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:text="@string/labelAniadir" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>